# mqsolver

./: CMakeLists.txt  LICENSE  README.md  README.txt  solve.py
include/mqsolver/: algor.h  cuda_util.h  debug.h  drow.h  feval.h  fix.h  graycode.h  macaulay.h  mq_math.h  mqfix.h  mqsolver.h  options.h  rmac.h  util.h
include/threadpool/: threadpool.h
src/: main.c
src/mqsolver/: algor.c  cuda_util.cu  debug.c  drow.c  feval.c  fix.cu  graycode.cu  macaulay.c  mq_math.c  mqfix.c  mqsolver.cu  options.c  rmac.cu  util.c
src/threadpool/: threadpool.c
